<resources>
    <string name="app_name">Airweb News</string>

    <!--Menu-->
    <string name="menu">Menu</string>
    <string name="menu_news">News</string>
    <string name="menu_contact">Contact</string>

    <!--Parameters-->
    <string name="parameters">Paramètres</string>
    <string name="type_sort">Trier par type</string>
    <string name="news">News</string>
    <string name="hot">Hot</string>
    <string name="actualite">Actualité</string>
    <string name="order_by">Trier par :</string>
    <string name="date">Date</string>
    <string name="title">Titre</string>
    <string name="order_direction">Par ordre :</string>
    <string name="asc">Ascendant</string>
    <string name="desc">Descendant</string>
    <string name="search">Search</string>

    <!--News Description-->
    <string name="news_description">Description News</string>

    <!--Contact-->
    <string name="airweb">Airweb</string>
    <string name="slogan"> - Facilitateur de mobilité</string>
    <string name="address">1 Rue Royale, Bureaux de Colline, 92210 Saint Cloud</string>
    <string name="mail">contact@airweb.fr</string>
    <string name="phone">+33 1 76 61 65 10</string>

</resources>