<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_type_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_sort"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"/>

    <RadioGroup
        android:id="@+id/rg_type_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_type_sort"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news" />

        <RadioButton
            android:id="@+id/rb_hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot" />

        <RadioButton
            android:id="@+id/rb_actualite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualite" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_order_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_by"
        app:layout_constraintTop_toBottomOf="@id/rg_type_sort"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"/>

    <RadioGroup
        android:id="@+id/rg_order_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_order_by"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"/>

        <RadioButton
            android:id="@+id/rb_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>