<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news_list">

    <fragment
        android:id="@+id/nav_news_list"
        android:name="fr.Airweb.news.ui.newsList.NewsListFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/news_list_fragment" >
        <action
            android:id="@+id/action_nav_news_list_to_nav_news_description"
            app:destination="@id/nav_news_description" />
    </fragment>

    <fragment
        android:id="@+id/nav_news_description"
        android:name="fr.Airweb.news.ui.newsDescription.NewsDescriptionFragment"
        android:label="@string/news_description"
        tools:layout="@layout/news_description_fragment">
    </fragment>

    <fragment
        android:id="@+id/nav_parameters"
        android:name="fr.Airweb.news.ui.parameters.ParametersFragment"
        android:label="@string/parameters"
        tools:layout="@layout/parameters_fragment" >
    </fragment>

    <fragment
        android:id="@+id/nav_contact"
        android:name="fr.Airweb.news.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/contact_fragment">
    </fragment>

</navigation>